--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 authors = ["FujiHaruka <fujiharuka@realglobe.jp>"]
 
 [dependencies]
+serde = "1.0"
+serde_derive = "1.0.14"
 serde_json = "1.0"
